--- a/css/index.css
+++ b/css/index.css
@@ -43,12 +43,14 @@ body {
     font-family: tt_commons_light,sans-serif;
     font-size: 3.5em;
     margin-top: 0.5em;
+    text-align: center;
 }
 
 #sub-title{
     font-family: tt_commons_light,sans-serif;
     font-size: 1.5em;
     margin-top: -1em;
+    text-align: center;
 }
 
 #icon-container{
@@ -153,11 +155,12 @@ body {
 @media screen and (max-width: 540px) {  
     #me {
         width: 200px;
+        height: 200px;
         margin-top: 3em;
     }
     #title{
         font-family: tt_commons_light,sans-serif;
-        font-size: 2.5em;
+        font-size: 2em;
         margin-top: 1em;
     }
     #sub-title{
