--- a/css/index.css
+++ b/css/index.css
@@ -53,6 +53,15 @@ body {
     text-align: center;
 }
 
+.sub-title-link{
+    color:#db8d8d;
+}
+
+.sub-title-link:hover{
+    text-decoration: none;
+    color: #c48080;
+}
+
 #icon-container{
     width: 100%;
     margin-top: -1em;
