--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,7 @@ body {
         font-family: tt_commons_light,sans-serif;
         font-size: 1.2em;
         margin-top: -1em;
+        width: 100%;
     }
     #text{
         font-family: tt_commons_light,sans-serif;
